adding image and background color

--- a/Componentes Aguirre/src/app/components/toolbar/toolbar.component.html
+++ b/Componentes Aguirre/src/app/components/toolbar/toolbar.component.html
@@ -1,1 +1,8 @@
-<p>toolbar works!</p>
+<nav class="navbar navbar-light bg-light toolbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="https://lanacion.com.ec/wp-content/uploads/2019/12/logos-coderhouse-01.png" alt="" width="200" height="55" class="d-inline-block align-text-top">
+        Bootstrap
+      </a>
+    </div>
+  </nav>
