adding styles to components

--- a/Componentes Aguirre/src/app/app.component.html
+++ b/Componentes Aguirre/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-toolbar></app-toolbar>
-<app-navbar></app-navbar>
-<app-content></app-content>
+<div class="container-components">
+    <app-navbar class="container-left"></app-navbar>
+    <app-content class="container-right"></app-content>
+</div>
