--- a/Componentes Aguirre/src/app/components/content/content.component.html
+++ b/Componentes Aguirre/src/app/components/content/content.component.html
@@ -1,1 +1,26 @@
-<p>content works!</p>
+<div class="div-c">
+    <h3>Experience</h3>
+</div>
+<hr/>
+<div class="experience">
+    <h4 class="tittle">Backend Web Page ONG - Alkemy Labs (2022)</h4>
+    <h5 class="charge">Desarrollador Backend Java</h5>
+    <p class="description">Se desarrollo el backend de una página web para una ONG ficticia dentro de la Aceleracion
+        de Alkemy. Se trabajo en conjunto, 6 trainners junto con 1 mentor Senior bajo la metodologia
+        Scrum utilizando el tablero de Jira. Las tecnologías fueron: Java como lenguage de programacion y 
+        SpringBoot como aplicación del framework Spring; JUnit5, Mockito y una base de datos H2 en memoria 
+        para la base de datos y los test unitarios; Swagger y Postman para la documentación; Spring Security
+         y JWT para la seguridad y roles; MySQL como base de datos; SendGrid para el envio de mails; 
+         AWS s3 para el guardado de imagenes en servidores; Git como controlador de versiones y GitHub 
+         para el repositorio remoto.
+    </p>
+</div>
+<div class="experience">
+    <h4 class="tittle">Curso de Introducción a la programación en C++ - Remoto (2021)</h4>
+    <h5 class="charge">Profesor a cargo</h5>
+    <p class="description">Curso dirigido a alumnos de la universidad de Córdoba que cursaban el primer 
+        año de programación. Enfocado en entender la lógica y aplicarla para la resolución de problemas.
+        Temas vistos: Fundamentos de la programación, lógica, variables, estructuras de repetición, 
+        condicionales, funciones, parametros y librerias.
+    </p>
+</div>
