--- a/Componentes Aguirre/src/app/components/navbar/navbar.component.html
+++ b/Componentes Aguirre/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,56 @@
-<p>navbar works!</p>
+<div class="collapse navbar-element" id="navbarToggleExternalContent">
+    <div class="p-4">
+        <h5 class="h5">Contacto</h5>
+      <ul>
+        <li><a class="link" href="https://www.linkedin.com/in/alejandro-andres-aguirre/" target="_blank">LinkedIn</a></li>
+        <li><a class="git" href="https://github.com/NoviceYh" target="_blank">GitHub</a></li>
+        <li>Teléfono: (+549) 2944239685</li>
+        <li>Email: aguirreee21@gmail.com</li>
+      </ul>
+      <h5 class="h5">Habilidades</h5>
+      <ul>
+        <li>Escucha activa</li>
+        <li>Amigable y orientado al servicio</li>
+        <li>Empatia - Resolución de conflictos</li>
+        <li>SCRUM - Trabajo en equipo</li>
+      </ul>
+      <h5 class="h5">Tecnologías</h5>
+      <ul>
+        <li>Java 11 - Spring/Boot/Security</li>
+        <li>JUnit - Mockito - Swagger - Postman</li>
+        <li>Git - GitHub</li>
+        <li>SQL - MySQL</li>
+        <li>HTML - CSS - JS</li>
+      </ul>
+      <h5 class="h5">Idiomas</h5>
+      <ul>
+        <li>Ingles: <a class="eng" href="http://" target="_blank">Certificado C1</a></li>
+      </ul>
+    </div>
+  </div>
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        <span> Contact / Skills / Technologies</span>
+      </button>
+    </div>
+  </nav>
+  <div class="profile">
+    <h3>Perfil</h3>
+    <p>Fanático de la tecnología
+      desde chico.
+      Me gusta resolver problemas
+      y enfrentarme a distintos
+      desafios.
+      Autodidácta en mi tiempo
+      libre.
+      Poseo una amplia
+      experiencia en servicio al
+      cliente, lo que me permitió
+      adquirir varias habilidades
+      blandas tales como la
+      resolución de conflictos,
+      escucha activa, flexibilidad y
+      toma de decisiones.</p>
+  </div>  
