--- a/Componentes Aguirre/src/app/components/toolbar/toolbar.component.html
+++ b/Componentes Aguirre/src/app/components/toolbar/toolbar.component.html
@@ -1,8 +1,21 @@
-<nav class="navbar navbar-light bg-light toolbar">
+<div class="conteiner-all">
+  <nav class="navbar navbar-light bg-light toolbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="https://lanacion.com.ec/wp-content/uploads/2019/12/logos-coderhouse-01.png" alt="" width="200" height="55" class="d-inline-block align-text-top">
-        Bootstrap
+        <img
+          src="https://lanacion.com.ec/wp-content/uploads/2019/12/logos-coderhouse-01.png"
+          alt=""
+          width="200"
+          height="55"
+          class="d-inline-block align-text-top"
+        />
       </a>
+      <div>
+        <h1>Java Developer</h1>
+      </div>
+      <div>
+        <h3 class="h3">Componentes Aguirre</h3>
+      </div>
     </div>
   </nav>
+</div>
