--- a/Componentes Aguirre/src/app/components/toolbar/toolbar.component.css
+++ b/Componentes Aguirre/src/app/components/toolbar/toolbar.component.css
@@ -1,3 +1,14 @@
 .toolbar{
     background-color: rgb(232, 255, 60) !important
 }
+
+.h1{
+    font-size: 30px;
+    text-align: center;
+}
+
+.h3{
+    font-size: 25px;
+    font-style: italic;
+    margin-right: 5px;
+}
