--- a/Lista-Aguirre/src/app/components/directive/directive.component.html
+++ b/Lista-Aguirre/src/app/components/directive/directive.component.html
@@ -44,6 +44,7 @@
     <button class="btn btn-outline-danger" (click)="mostrarTodos()">Mostrar todos</button>
   </div>
 </div>
+<h5> Fecha de hoy: {{actualDate | date}} </h5>
 <div class="footer">
     <p>Copyrigth 2022 - Lista Aguirre - CoderHouse - Angular</p>
 </div>
