add object countries

--- a/Lista-Aguirre/src/app/components/directive/directive.component.css
+++ b/Lista-Aguirre/src/app/components/directive/directive.component.css
@@ -42,7 +42,7 @@ table{
     background-color: #eeeeee;
 }
 
-.nacionalidad{
+.nacionalidad img{
     width: 50px;
     height: 25px;
     align-items: center;
